--- a/options/train/udcunet.yml
+++ b/options/train/udcunet.yml
@@ -1,5 +1,5 @@
 # general settings
-name: UDCUNet_4gpu
+name: UDCUNet_4gpu-AF
 model_type: UDCModel
 scale: 1
 num_gpu: auto
@@ -10,7 +10,7 @@ datasets:
   train:
     name: syn_pair_train
     type: TripleImageDataset
-    dataroot_gt: datasets/iphone_dataset/ref/train/
+    dataroot_gt: datasets/iphone_dataset/AlignFormer/train/
     dataroot_ref: datasets/iphone_dataset/mask/train/
     dataroot_lq: datasets/iphone_dataset/lq/train/
     meta_info_file: ~
@@ -32,7 +32,7 @@ datasets:
   val:
     name: syn_pair_val
     type: TripleImageDataset
-    dataroot_gt: datasets/iphone_dataset/ref/test_sub/
+    dataroot_gt: datasets/iphone_dataset/AlignFormer/test_sub/
     dataroot_ref: datasets/iphone_dataset/mask/test_sub/
     dataroot_lq: datasets/iphone_dataset/lq/test_sub/
     filename_tmpl: '{}'
