--- a/options/train/ecfnet_phase1.yml
+++ b/options/train/ecfnet_phase1.yml
@@ -1,5 +1,5 @@
 # general settings
-name: ECFNet-AlignFormer-ChangeLRSched
+name: ECFNet-AlignFormer
 model_type: ECFNetModel
 scale: 1
 num_gpu: auto
@@ -63,7 +63,7 @@ train:
 
   scheduler:
     type: CosineAnnealingRestartLR
-    periods: [100000, 100000, 100000, 100000]
+    periods: [400000, 100000, 100000, 100000]
     restart_weights: [1, 1, 1, 1]
     eta_min: !!float 1e-7
 
