--- a/options/train/discnet/discnet-vgg-nomask.yml
+++ b/options/train/discnet/discnet-vgg-nomask.yml
@@ -1,81 +1,104 @@
+# Modified SRResNet w/o BN from:
+# Photo-Realistic Single Image Super-Resolution Using a Generative Adversarial Network
+
+# loss function: divided with the count of non-zero mask elements.
+
 # general settings
-name: ECFNet-AlignFormer-Phase2
-model_type: ECFNetModel
+name: DISCNet-nomask-vgginput
+model_type: DISCNetModel
 scale: 1
-num_gpu: auto
+num_gpu: 4
 manual_seed: 10
 
 # dataset and data loader settings
 datasets:
   train:
     name: syn_pair_train
-    type: PairedImageDataset
-    dataroot_gt: datasets/iphone_dataset/ref/train/
+    type: TripleImageDataset
+    dataroot_gt: datasets/iphone_dataset/AlignFormer/train/
     dataroot_ref: datasets/iphone_dataset/mask/train/
     dataroot_lq: datasets/iphone_dataset/lq/train/
+    psf_path: "/home/n2/chanwoo/benchmark-alignformer/AlignFormer/sit-train-psf.npy"
+
     meta_info_file: ~
     filename_tmpl: '{}'
     io_backend:
       type: disk
 
-    gt_size: 512
+    gt_size: 256
     use_flip: false
     use_rot: false
 
     # data loader
     use_shuffle: true
     num_worker_per_gpu: 4
-    batch_size_per_gpu: 1
-    dataset_enlarge_ratio: 50
+    batch_size_per_gpu: 4
+    dataset_enlarge_ratio: 10
     prefetch_mode: ~
 
   val:
     name: syn_pair_val
-    type: PairedImageDataset
-    dataroot_gt: datasets/iphone_dataset/ref/test_sub/
+    type: TripleImageDataset
+    dataroot_gt: datasets/iphone_dataset/AlignFormer/test_sub/
     dataroot_ref: datasets/iphone_dataset/mask/test_sub/
     dataroot_lq: datasets/iphone_dataset/lq/test_sub/
+    psf_path: "/home/n2/chanwoo/benchmark-alignformer/AlignFormer/sit-train-psf.npy"
+
     filename_tmpl: '{}'
     io_backend:
       type: disk
 
-#### network structures
+# network structures
 network_g:
-  type: ECFNet
+  type: DISCNet
   in_nc: 3
   out_nc: 3
-  num_res: 8
+  nf: 32
+  ns: 3
+  multi_scale: true
+  kernel_cond: img-psf
+  psf_nc: 5
+  kpn_sz: 5
 
 # path
 path:
-  pretrain_network_g: experiments/ECFNet-AlignFormer/models/net_g_best_360k.pth
-#  param_key_g: 'params_ema'
-  strict_load_g: true
+  pretrain_model_g: ~
+  strict_load: true
   resume_state: ~
 
 # training settings
 train:
   optim_g:
     type: Adam
-    lr: !!float 1e-5
+    lr: !!float 2e-4
     weight_decay: 0
     betas: [0.9, 0.99]
 
   scheduler:
     type: CosineAnnealingRestartLR
-    periods: [500000, 100000]
-    restart_weights: [ 1, 1]
+    periods: [200000, 200000, 200000, 200000, 200000]
+    restart_weights: [1, 1, 1, 1, 1]
     eta_min: !!float 1e-7
 
-  total_iter: 500000
+  total_iter: 1000000
   warmup_iter: -1  # no warm up
 
   # losses
   pixel_opt:
-    type: ECFNetLoss
+    type: L1Loss
     loss_weight: !!float 1.0
-
-
+    reduction: mean
+  perceptual_opt:
+    type: PerceptualLoss
+    layer_weights:
+      'conv5_4': 1  # before relu
+    vgg_type: vgg19
+    use_input_norm: true
+    perceptual_weight: !!float 1e-2
+    style_weight: 0
+    range_norm: false
+    criterion: l1
+    mask_input: false
 
 # validation settings
 val:
@@ -85,18 +108,17 @@ val:
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
-      crop_border: 4
+      crop_border: 0
       test_y_channel: false
     ssim:
       type: calculate_ssim
-      crop_border: 4
+      crop_border: 0
       test_y_channel: false
 
 # logging settings
 logger:
-  print_freq: 5
+  print_freq: 250
   save_checkpoint_freq: !!float 5e4
-
   use_tb_logger: true
   wandb:
     project: ~
@@ -105,4 +127,4 @@ logger:
 # dist training settings
 dist_params:
   backend: nccl
-  port: 29500
+  port: 29015
